--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
         <title>Main landing-page</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+        <link rel="icon" href="/styles/Images/articol-1.png" />
+        <link href="/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <link rel="icon" href="styles/Images/articol-1.png" />
-        <link href="css/bootstrap.min.css" rel="stylesheet">
     </head>
     <body>
-        <script src="js/bootstrap.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="js/script.js"></script>
-        <script src="js/moment.js"></script>
+        <script src="/js/bootstrap.min.js"></script>
+        <script src="/js/moment.js"></script>
+        <script src="/js/script.js"></script>
     </body>
 </html>
