--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="Eng">
+<html lang="en">
     <head>
         <title>Main landing-page</title>
         <meta charset="UTF-8">
