--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         <link rel="stylesheet" type="text/css" href="./css/style.css">
     </head>
     <body>
+        <input type="text" id="text"/>
+        <button type="button" id="btn">Click me</button>
+        <p class="text"></p>
         <div class="container-fluid">
             <div class="row">
               <div class="col-md-4 col-lg-3 navbar-container bg-light">
@@ -346,6 +349,15 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/moment.js"></script>
-    <script src="./js/script.js"></script>
+    <!-- <script src="./js/script.js"></script> -->
+    <script>
+        document.getElementById("btn").onclick = function(){add("date", "time", n)};
+        let n = document.getElementById("text").value;
+        let data = [];
+        function add(date, time, text) {
+            data.push({date: "date", time: "time", text: "text"})
+        }
+        console.log("data is: ", data);
+    </script>
     </body>
 </html>
