--- a/index.html
+++ b/index.html
@@ -297,17 +297,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/moment.js"></script>
-    <!-- <script src="./js/script.js"></script> -->
-    <script>
-      document.getElementById("btn").onclick = function () {
-        add("date", "time", n);
-      };
-      let n = document.getElementById("text").value;
-      let data = [];
-      function add(date, time, text) {
-        data.push({ date: "date", time: "time", text: "text" });
-      }
-      console.log("data is: ", data);
-    </script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
