--- a/index.html
+++ b/index.html
@@ -12,251 +12,12 @@
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
   </head>
   <body>
-    <input type="text" id="text" />
-    <button type="button" id="btn">Click me</button>
-    <p class="text"></p>
+    <input type="time" id="newTaskTime" />
+    <input type="date" id="newTaskDate" />
+    <input type="text" id="newTaskText" />
+    <button type="button" id="addTaskBtn">Click me</button>
 
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-4 col-lg-3 navbar-container bg-light">
-          <!-- Вертикальное меню -->
-          <nav class="sidebar navbar-expand-md navbar-light">
-            <header
-              style="
-                width: auto;
-                margin-top: 10px;
-                background-color: darkgrey;
-                border-radius: 5px;
-                text-align: center;
-                font-size: 20px;
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial,
-                  sans-serif;
-              "
-            >
-              <p
-                class="navbar-brand"
-                href="#"
-                style="
-                  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial,
-                    sans-serif;
-                  font-size: 25px;
-                "
-              >
-                Menu
-              </p>
-            </header>
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-toggle="collapse"
-              data-target="#navbar"
-              aria-controls="navbarSupportedContent"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbar">
-              <!-- Пункты меню -->
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link active">Пункт меню</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active">Пункт меню</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active">Пункт меню</a>
-                </li>
-              </ul>
-            </div>
-            <hr />
-            <p>МЕСТО ДЛЯ ТАБЛИЦЫ С СОБЫТИЯМИ</p>
-            <table>
-              <tr>
-                <th><p style="font-size: 20px">Plans</p></th>
-              </tr>
-              <tr>
-                <td>...</td>
-                <td>...</td>
-              </tr>
-              <tr>
-                <td>...</td>
-                <td>...</td>
-              </tr>
-              <tr>
-                <td>...</td>
-                <td>...</td>
-              </tr>
-              <tr>
-                <td>...</td>
-                <td>...</td>
-              </tr>
-            </table>
-          </nav>
-        </div>
-        <div
-          class="col-md-8 col-lg-9 content-container"
-          style="background-color: grey; padding: 10px; border-radius: 5px"
-        >
-          <div class="container">
-            <header
-              style="
-                width: auto;
-                margin-top: 10px;
-                margin-bottom: 10px;
-                background-color: darkgrey;
-                border-radius: 5px;
-                text-align: center;
-                font-size: 20px;
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial,
-                  sans-serif;
-              "
-            >
-              SHEDULE
-            </header>
-            <div class="row">
-              <div class="col-sm">
-                <button
-                  type="button"
-                  class="btn btn-primary"
-                  data-toggle="modal"
-                  data-target="#exampleModal"
-                >
-                  +
-                </button>
-                <div>
-                  <span>text</span>
-                  <input type="checkbox" checked />
-                </div>
-                <div>
-                  <span>text</span>
-                  <input type="checkbox" checked />
-                </div>
-              </div>
-              <div class="col-sm">
-                <form style="background-color: rgb(206, 206, 206)">
-                  <p>
-                    <input type="button" value="+" />
-                  </p>
-                </form>
-              </div>
-              <div class="col-sm">
-                <form style="background-color: rgb(206, 206, 206)">
-                  <p>
-                    <input type="button" value="+" />
-                  </p>
-                </form>
-              </div>
-              <div class="col-sm">
-                <form style="background-color: rgb(206, 206, 206)">
-                  <p>
-                    <input type="button" value="+" />
-                  </p>
-                </form>
-              </div>
-              <div class="col-sm">
-                <form style="background-color: rgb(206, 206, 206)">
-                  <p>
-                    <input type="button" value="+" />
-                  </p>
-                </form>
-              </div>
-              <div class="col-sm">
-                <form style="background-color: rgb(206, 206, 206)">
-                  <p>
-                    <input type="button" value="+" />
-                  </p>
-                </form>
-              </div>
-              <div class="col-sm">
-                <form style="background-color: rgb(206, 206, 206)">
-                  <p>
-                    <input type="button" value="+" />
-                  </p>
-                </form>
-              </div>
-            </div>
-            <hr />
-            <div class="row">
-              <div class="col-sm">
-                <form style="background-color: rgb(206, 206, 206)">
-                  <p>Форма</p>
-                </form>
-              </div>
-              <div class="col-sm">
-                <form style="background-color: rgb(206, 206, 206)">
-                  <p>Форма</p>
-                </form>
-              </div>
-              <div class="col-sm">
-                <form style="background-color: rgb(206, 206, 206)">
-                  <p>Форма</p>
-                </form>
-              </div>
-              <div class="col-sm">
-                <form style="background-color: rgb(206, 206, 206)">
-                  <p>Форма</p>
-                </form>
-              </div>
-              <div class="col-sm">
-                <form style="background-color: rgb(206, 206, 206)">
-                  <p>Форма</p>
-                </form>
-              </div>
-              <div class="col-sm">
-                <form style="background-color: rgb(206, 206, 206)">
-                  <p>Форма</p>
-                </form>
-              </div>
-              <div class="col-sm">
-                <form style="background-color: rgb(206, 206, 206)">
-                  <p>Форма</p>
-                </form>
-              </div>
-            </div>
-            <hr />
-            <div class="row">
-              <div class="col-sm">
-                <form style="background-color: rgb(206, 206, 206)">
-                  <p>Форма</p>
-                </form>
-              </div>
-              <div class="col-sm">
-                <form style="background-color: rgb(206, 206, 206)">
-                  <p>Форма</p>
-                </form>
-              </div>
-              <div class="col-sm">
-                <form style="background-color: rgb(206, 206, 206)">
-                  <p>Форма</p>
-                </form>
-              </div>
-              <div class="col-sm">
-                <form style="background-color: rgb(206, 206, 206)">
-                  <p>Форма</p>
-                </form>
-              </div>
-              <div class="col-sm">
-                <form style="background-color: rgb(206, 206, 206)">
-                  <p>Форма</p>
-                </form>
-              </div>
-              <div class="col-sm">
-                <form style="background-color: rgb(206, 206, 206)">
-                  <p>Форма</p>
-                </form>
-              </div>
-              <div class="col-sm">
-                <form style="background-color: rgb(206, 206, 206)">
-                  <p>Форма</p>
-                </form>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <div id="calendar"></div>
 
     <footer>
       <!-- Modal -->
